MOD: switch to pymysql connect

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -1,4 +1,4 @@
-# 大创 DevNotes - 网页前后端开发
+# 大创 DevNotes - Web 前后端开发
 
 written by *Jason Zhang*
 
@@ -9,10 +9,12 @@ written by *Jason Zhang*
 * 创建工程：`django-admin startproject web_site`
 * 创建后端应用：`python manage.py startapp backend`
 * 启动本地服务器：`python manage.py runserver localhost:1234`
+* 迁移默认数据表：`python manage.py migrate`
+* 创建管理员用户：`python manage.py createsuperuser`
 
 ### django 全局设置
 
-`settings.py`：
+文件 `settings.py` ：
 ```python
 ALLOWED_HOSTS = ['*']
 
@@ -43,6 +45,29 @@ STATICFILES_DIRS = [
     os.path.join(BASE_DIR, 'frontend/static')
 ]
 ```
+
+### 不使用 mysqlclient 来连接 Django2 和 MySQL
+
+django 默认指定的 MySQL 驱动 mysqlclient 包安装十分容易失败，这里介绍一种使用 pymysql 代替的方法。
+
+首先安装 pymysql：
+
+```bash
+pip install pymysql
+```
+
+之后修改 `web_site/__init__.py`：
+
+```python
+import pymysql
+
+pymysql.install_as_MySQLdb()
+```
+这样便使用了 pymysql 代替了 mysqlclient，并且数据表迁移指令也可以正常运行。
+
+> **什么是 PyMySQL？**
+> * PyMySQL 是在 Python3.x 版本中用于连接 MySQL 服务器的一个库，Python2中则使用mysqldb。
+> * PyMySQL 遵循 Python 数据库 API v2.0 规范，并包含了 pure-Python MySQL 客户端库。
 
 ### url 路由逻辑
 
