--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -45,9 +45,10 @@ STATICFILES_DIRS = [
 ]
 ```
 
-### 不使用 mysqlclient 来连接 Django2 和 MySQL
+### 使用 PyMySql 替换 mysqlclient
 
-django 默认指定的 MySQL 驱动 mysqlclient 包安装十分容易失败，这里介绍一种使用 pymysql 代替的方法。
+django 默认指定的 MySQL 驱动 mysqlclient 包安装十分容易失败，而且并不认识 MySQL8 的默认用户加密方式 `caching_sha2_password`，需要更改加密方式，十分繁琐。\
+如果使用 pymysql 来代替，不仅安装方便，而且可以正确识别 `caching_sha2_password` 加密，简单方便，推荐使用！
 
 首先安装 pymysql：
 
@@ -67,6 +68,16 @@ pymysql.install_as_MySQLdb()
 > **什么是 PyMySQL？**
 > * PyMySQL 是在 Python3.x 版本中用于连接 MySQL 服务器的一个库，Python2中则使用mysqldb。
 > * PyMySQL 遵循 Python 数据库 API v2.0 规范，并包含了 pure-Python MySQL 客户端库。
+
+附：MySql8 修改用户加密方式（只可以通过脚本运行）：
+```sql
+# 选择mysql库
+USE mysql;
+# 修改加密方式
+ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '123456';
+# 刷新数据库
+FLUSH PRIVILEGES;
+```
 
 ### url 路由逻辑
 
