ADD: some dev note for urls

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -79,11 +79,16 @@ ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '123456';
 FLUSH PRIVILEGES;
 ```
 
-### url 路由逻辑
+### django 路由
 
-工程主要分为前端和后端部分，后端 django 管理前端路由，通过在 `urls.python` 中编写路由逻辑，将对应的 url 转发到 backend 应用下 `view.py` 的对应函数，进行页面渲染返回。
+工程主要分为前端和后端部分，后端 django 管理前端路由，通过在 `urls.python` 中编写路由逻辑，将对应的浏览器中的 url 转发到 backend 应用下 `view.py` 的对应函数，进行页面渲染返回。
 
 url -> urls.python下的path -> backend中view.py对应函数 -> 返回渲染的页面。
+
+**值得注意的是**，通过 **django 启动了服务后，所有的 url 路由逻辑将由 django 掌管，不再遵循本地相对路径的规则**。\
+即：在 `urls.python` 下进行的路由编写，将是在浏览器中能够生效的 url，如果在 html 中要进行页面跳转，也**必须遵循 django 中编写的 url（而非本地相对路径）**。\
+在 html 中编写的相对路径前缀会被自动去掉以进行网络请求（所以有时候写了也能正常运作，但是实际上已经多余）\
+在 `settings.py` 中设置的静态路径前缀，也会被 django 掌管为合法 url 前缀（html 中的引用也需要进行修改，本地相对路径引用不再生效），用于进行静态资源请求。
 
 ### 静态文件搜索逻辑
 
