MOD: change the homepage template and adjust for this project

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -11,6 +11,12 @@ written by *Jason Zhang*
 * 启动本地服务器：`python manage.py runserver localhost:1234`
 * 迁移默认数据表：`python manage.py migrate`
 * 创建管理员用户：`python manage.py createsuperuser`
+* 数据表 inspect：`python manage.py inspectdb > ./backend/models.py`
+
+### 管理员用户
+
+* 用户名：`root`
+* 密码：`admin`
 
 ### django 全局设置
 
@@ -123,4 +129,163 @@ url -> urls.python下的path -> backend中view.py对应函数 -> 返回渲染的
 
 * 替换了模板组件
 * 添加了 index 重定向
-* 
+* 制作了原始数据展示页面的 index
+* 进行了 inspectdb (注意转换为 utf-8)
+* 管理员界面定制
+
+#### 使用 JS 解析 url 中的请求参数
+
+```js
+// 解析 url 中的请求参数
+function getQueryVar(str_target) {
+    let query = window.location.search.substring(1);
+    let vars = query.split("&");
+    for (let i=0;i<vars.length;i++) {
+            let pair = vars[i].split("=");
+            if(pair[0] == str_target){return pair[1];}
+    }
+    return false;
+}
+```
+
+### 2018.11.18 记录
+
+* 进行 django 模型层的学习
+* 对 database access layer 添加了 logger
+
+#### django 模型层操作
+
+首先要从 models 中导入相关的 数据表模型，才可以相关操作。
+
+> 参考链接：
+> [Django - The model layer - Making queries](https://docs.djangoproject.com/en/2.1/topics/db/queries/)
+> [Django - The model layer - QuerySet API reference](https://docs.djangoproject.com/en/2.1/ref/models/querysets/)
+> [Django - The model layer - Lookup API reference](https://docs.djangoproject.com/en/2.1/ref/models/lookups/)
+> [Django - Database transactions](https://docs.djangoproject.com/en/2.1/topics/db/transactions/)
+
+```python
+# blog/models.py
+from django.db import models
+
+class Blog(models.Model):
+    name = models.CharField(max_length=100)
+    tagline = models.TextField()
+
+    def __str__(self):
+        return self.name
+
+# dba.py
+from blog.models import Blog
+```
+
+##### 创建新对象
+
+```python
+# methond 1
+b = Blog(name='1', tagline='a')
+b.save()
+
+# methond 2 : equal to methond 1
+b = Blog.objects.create(name='1', tagline='a')
+```
+
+> This performs an INSERT SQL statement behind the scenes. Django doesn’t hit the database until you explicitly call `save()`.
+> 
+> The `save()` method has no return value.
+> 
+> To create and save an object in a single step, use the `create()` method.
+
+##### 保存修改
+
+To save changes to an object that’s already in the database, use `save()`.
+
+Given a Blog instance b5 that has already been saved to the database, this example changes its name and updates its record in the database:
+
+```python
+b5.name = 'New name'
+b5.save()
+```
+
+This performs an UPDATE SQL statement behind the scenes. Django doesn’t hit the database until you explicitly call `save()`.
+
+##### Retrieving objects with filters
+
+* **QuerySet:** represents a collection of objects from your database. It can have zero, one or many filters. In SQL terms, a QuerySet equates to a SELECT statement, and a filter is a limiting clause such as WHERE or LIMIT.
+* **Manager:** You get a QuerySet by using your model’s Manager. Each model has at least one Manager, and it’s called objects by default.
+
+> Managers are accessible only via model classes, rather than from model instances.
+
+检索所有对象：
+
+```python
+all_items = Blog.objects.all()
+```
+
+检索指定的对象，有两种常见的检索方式：
+
+```python
+# Returns a new QuerySet containing objects that match the given lookup parameters.
+filter(**kwargs)
+# Returns a new QuerySet containing objects that do not match the given lookup parameters.
+exclude(**kwargs)
+```
+
+由于返回的均为 queryset，所以链式检索成为可能：
+
+```python
+Entry.objects.filter(headline__startswith='What').exclude(pub_date__gte=datetime.date.today())
+```
+
+切片操作也是支持的，但是负切片不支持。
+
+> Each time you refine a QuerySet, you get a brand-new QuerySet
+> 
+> **QuerySets are lazy.** And filter() will always give you a QuerySet
+
+##### Retrieving a single object with get()
+
+```python
+one_entry = Entry.objects.get(pk=1)
+```
+
+Note that there is a difference between using `get()`, and using `filter()` with a slice of [0]. If there are no results that match the query, `get()` will raise a `DoesNotExist` exception. This exception is an attribute of the model class that the query is being performed on - so in the code above, if there is no Entry object with a primary key of 1, Django will raise `Entry.DoesNotExist`.\
+Similarly, Django will complain if more than one item matches the `get()` query. In this case, it will raise `MultipleObjectsReturned`, which again is an attribute of the model class itself.
+
+##### 事务
+
+atomic is usable both as a decorator:
+
+```python
+from django.db import transaction
+
+@transaction.atomic
+def viewfunc(request):
+    # This code executes inside a transaction.
+    do_stuff()
+and as a context manager:
+```
+
+from django.db import transaction
+
+```python
+def viewfunc(request):
+    # This code executes in autocommit mode (Django's default).
+    do_stuff()
+
+    with transaction.atomic():
+        # This code executes inside a transaction.
+        do_more_stuff()
+```
+
+#### Logger
+
+```python
+import logging
+logger = logging.getLogger(__name__)
+
+logger.debug()
+logger.info()
+logger.warning()
+logger.error()
+logger.critical()
+```
