--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -152,6 +152,7 @@ function getQueryVar(str_target) {
 
 * 进行 django 模型层的学习
 * 对 database access layer 添加了 logger
+* 完成了基本数据展示页面
 
 #### django 模型层操作
 
@@ -289,3 +290,7 @@ logger.warning()
 logger.error()
 logger.critical()
 ```
+
+### 2018.11.19 记录
+
+* 迁移并制作了新主页
