MOD: add dev_notes

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -294,3 +294,22 @@ logger.critical()
 ### 2018.11.19 记录
 
 * 迁移并制作了新主页
+
+### 2019.11.20 记录
+
+* 将人物时空可视化工程，使用 `<iframe>` 嵌入的方式，完成了迁移
+
+#### About <iframe>
+
+一个HTML页面可以有一个或多个子框架，这些子框架以 `<iframe>` 来标记，用来显示一个独立的HTML页面。
+
+如果只涉及到将网页A在网页B中集成显示，不涉及A和B之间复杂交互的话，通过 `<iframe>` 可以轻松跨域显示。
+
+* 同源：是指相同的协议、域名、端口，三者都相同才属于同源
+    * 例如：
+        * http：协议
+        * www：服务器名（子域名）
+        * funwall.cn：域名(主域名)
+        * www.funwall.cn：网站名，服务器名 + 域名
+* 同源策略：浏览器出于安全考虑，在全局层面禁止了页面加载或执行与自身来源不同域的任何脚本，站外其他来源的脚本页面同页面的交互则被严格限制
+* 跨域：由于浏览器同源策略，凡是发送请求的url的协议、域名、端口三者之间任意一个与当前页面地址不同则视为跨域（简单的讲法：不同域之间相互请求资源）
