ADD: Network Graph of poets relation

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -313,3 +313,60 @@ logger.critical()
         * www.funwall.cn：网站名，服务器名 + 域名
 * 同源策略：浏览器出于安全考虑，在全局层面禁止了页面加载或执行与自身来源不同域的任何脚本，站外其他来源的脚本页面同页面的交互则被严格限制
 * 跨域：由于浏览器同源策略，凡是发送请求的url的协议、域名、端口三者之间任意一个与当前页面地址不同则视为跨域（简单的讲法：不同域之间相互请求资源）
+
+### 2019.11.26 记录
+
+* 实验了 Echarts 关系图
+
+#### Echarts
+
+首先，在html中，要设置图标的目标节点：
+```html
+<!-- div 已经嵌套在 Bootstrap 的 col 布局中 -->
+<!-- 其中 style="width:100% 是必须的，这样才可以响应" -->
+<div id="ec-1" style="width:100%; height:400px"></div>
+```
+
+然后，在js中如下设置：
+```js
+// ES6语法 - chrome默认支持
+// 为何不要在 $(()=>{}); 中执行？
+// jquery 默认的 document.ready，当 dom 确定后便会执行
+// bootstrap 等众多 js 库，都在 document.ready 后对 dom 进行更改（按顺序排队）
+// 但是神坑的 bootstrap4 对于移动设备适应时，并不会一次性将 dom 宽度设置正确
+// 而是二次进行修改，导致了排队在初级别末尾的 document.ready 设置 echarts 宽度异常
+$(window).on("load", ()=>{
+    // 定义全局列表，用于收集html中的所有echarts图表
+    let g_charts = [];
+    // charts_0 为其中一个图表
+    let chart_0 = echarts.init($("#ec-1").get(0));
+    let option = {...};
+    chart_0.setOption(option);
+    // 设置完成后 将 chart_0 加入数组
+    g_charts.push(chart_0);
+    // 设置窗口监听事件 resize时 重新将所有图表resize
+    window.addEventListener("resize", ()=>{
+        g_charts.forEach(item => {
+            item.resize();
+        });
+    });
+});
+// or
+$(()=>{
+    $(()=>{
+        // setting
+    });
+});
+```
+
+#### Echarts 关系图
+
+官网样例代码无误，但是需要去 Github 下载一个插件。
+
+[datatool 插件](https://github.com/apache/incubator-echarts/blob/master/dist/extension/dataTool.min.js)
+
+### 2019.11.29
+
+* 完成了基本 Echarts 关系图绘制
+    * 未使用 datatool
+
