MOD: a little adjust for index page

--- a/notes/2. DevNotes - Web 前后端开发.md
+++ b/notes/2. DevNotes - Web 前后端开发.md
@@ -295,7 +295,7 @@ logger.critical()
 
 * 迁移并制作了新主页
 
-### 2019.11.20 记录
+### 2018.11.20 记录
 
 * 将人物时空可视化工程，使用 `<iframe>` 嵌入的方式，完成了迁移
 
@@ -314,7 +314,7 @@ logger.critical()
 * 同源策略：浏览器出于安全考虑，在全局层面禁止了页面加载或执行与自身来源不同域的任何脚本，站外其他来源的脚本页面同页面的交互则被严格限制
 * 跨域：由于浏览器同源策略，凡是发送请求的url的协议、域名、端口三者之间任意一个与当前页面地址不同则视为跨域（简单的讲法：不同域之间相互请求资源）
 
-### 2019.11.26 记录
+### 2018.11.26 记录
 
 * 实验了 Echarts 关系图
 
@@ -365,8 +365,12 @@ $(()=>{
 
 [datatool 插件](https://github.com/apache/incubator-echarts/blob/master/dist/extension/dataTool.min.js)
 
-### 2019.11.29
+### 2018.11.29
 
 * 完成了基本 Echarts 关系图绘制
     * 未使用 datatool
 
+### 2018.12.2
+
+* 合入文案修改
+* 首页微调
